[package]
authors = ["LinskRuis.32G <mgr9525@qq.com>"]
edition = "2018"
name = "hbtp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true
[dependencies]
async-std = "1.9.0"
futures = "0.3.16"
qstring = "0.7.2"
serde = "1.0.136"
serde_json = "1.0.78"
# ruisutil={git="https://github.com/mgr9525/rust-ruisutil.git", rev="2dfd958851c634ea59e020cedf49aba640efb270"}
ruisutil={path="/home/mgr/programs/rust/rust-ruisutil"}
